exports[`test Formats the schema correctly for a SPARQL query 1`] = `
Array [
  Object {
    "alias": "Query Results",
    "columns": Array [
      Object {
        "alias": "name",
        "dataType": "string",
        "id": "name",
      },
      Object {
        "alias": "height",
        "dataType": "string",
        "id": "height",
      },
      Object {
        "alias": "heightInInches",
        "dataType": "string",
        "id": "heightInInches",
      },
      Object {
        "alias": "hand",
        "dataType": "string",
        "id": "hand",
      },
      Object {
        "alias": "ppg",
        "dataType": "string",
        "id": "ppg",
      },
      Object {
        "alias": "apg",
        "dataType": "string",
        "id": "apg",
      },
    ],
    "id": "QueryTable",
  },
]
`;

exports[`test Formats the schema correctly for a SQL query 1`] = `
Array [
  Object {
    "alias": "Query Results",
    "columns": Array [
      Object {
        "alias": "name",
        "dataType": "string",
        "id": "name",
      },
      Object {
        "alias": "pointspergame",
        "dataType": "float",
        "id": "pointspergame",
      },
      Object {
        "alias": "assistspergame",
        "dataType": "float",
        "id": "assistspergame",
      },
    ],
    "id": "QueryTable",
  },
]
`;

exports[`test Formats the schema correctly for a non-query, no version 1`] = `
Array [
  Object {
    "alias": "anintrotodata_worlddatasetchangelog_sheet1",
    "columns": Array [
      Object {
        "alias": "Date",
        "dataType": "date",
        "id": "v_0",
      },
      Object {
        "alias": "Change",
        "dataType": "string",
        "id": "v_1",
      },
    ],
    "id": "anintrotodata_worlddatasetchangelog_sheet1",
  },
  Object {
    "alias": "datadotworldbballstats",
    "columns": Array [
      Object {
        "alias": "Name",
        "dataType": "string",
        "id": "v_0",
      },
      Object {
        "alias": "PointsPerGame",
        "dataType": "float",
        "id": "v_1",
      },
      Object {
        "alias": "AssistsPerGame",
        "dataType": "float",
        "id": "v_2",
      },
    ],
    "id": "datadotworldbballstats",
  },
  Object {
    "alias": "datadotworldbballteam",
    "columns": Array [
      Object {
        "alias": "Name",
        "dataType": "string",
        "id": "v_0",
      },
      Object {
        "alias": "Height",
        "dataType": "string",
        "id": "v_1",
      },
      Object {
        "alias": "Handedness",
        "dataType": "string",
        "id": "v_2",
      },
    ],
    "id": "datadotworldbballteam",
  },
]
`;

exports[`test Formats the schema correctly for a non-query, with version 1`] = `
Array [
  Object {
    "alias": "anintrotodata_worlddatasetchangelog_sheet1",
    "columns": Array [
      Object {
        "alias": "Date",
        "dataType": "date",
        "id": "date",
      },
      Object {
        "alias": "Change",
        "dataType": "string",
        "id": "change",
      },
    ],
    "id": "anintrotodata_worlddatasetchangelog_sheet1",
  },
  Object {
    "alias": "datadotworldbballstats",
    "columns": Array [
      Object {
        "alias": "Name",
        "dataType": "string",
        "id": "name",
      },
      Object {
        "alias": "PointsPerGame",
        "dataType": "float",
        "id": "pointspergame",
      },
      Object {
        "alias": "AssistsPerGame",
        "dataType": "float",
        "id": "assistspergame",
      },
    ],
    "id": "datadotworldbballstats",
  },
  Object {
    "alias": "datadotworldbballteam",
    "columns": Array [
      Object {
        "alias": "Name",
        "dataType": "string",
        "id": "name",
      },
      Object {
        "alias": "Height",
        "dataType": "string",
        "id": "height",
      },
      Object {
        "alias": "Handedness",
        "dataType": "string",
        "id": "handedness",
      },
    ],
    "id": "datadotworldbballteam",
  },
]
`;

exports[`test Formats the schema correctly for a project 1`] = `
Array [
  Object {
    "alias": "anintrotodata_worlddatasetchangelog_sheet1",
    "columns": Array [
      Object {
        "alias": "Date",
        "dataType": "date",
        "id": "date",
      },
      Object {
        "alias": "Change",
        "dataType": "string",
        "id": "change",
      },
    ],
    "id": "tester__intro_data_set__anintrotodata_worlddatasetchangelog_sheet1",
  },
  Object {
    "alias": "anintrotodata_worlddatasetchangelog_sheet1",
    "columns": Array [
      Object {
        "alias": "Date",
        "dataType": "date",
        "id": "date",
      },
      Object {
        "alias": "Change",
        "dataType": "string",
        "id": "change",
      },
    ],
    "id": "tester2__other_data_set__anintrotodata_worlddatasetchangelog_sheet1",
  },
]
`;

exports[`test rejects invalid column names 1`] = `""invalid.column.name" is not a valid column name. To work in Tableau, columns must contain only letters, numbers, or underscores. To fix this issue, make sure to modify your query and use alias to ensure all column names are valid."`;
